--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         Angular Material
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="buttonIcon">Button icon</a>
+      <a mat-list-item routerLink="/pages/users">Usuários</a>
       <a mat-list-item routerLink="formFieldInput">Form field input</a>
       <a mat-list-item routerLink="progBarSpinner">Progress bar and Spinner</a>
       <a mat-list-item routerLink="tab">Tabs</a>
