--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,39 +5,48 @@
     [opened]="!isSmallScreen"
     [fixedInViewport]="true"
     [mode]="sidenavMode"
-    >
-    <mat-toolbar color="primary">
-        Angular Material
-    </mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/pages/users">Usuários</a>
-      <a mat-list-item routerLink="formFieldInput">Form field input</a>
-      <a mat-list-item routerLink="progBarSpinner">Progress bar and Spinner</a>
-      <a mat-list-item routerLink="tab">Tabs</a>
-      <a mat-list-item routerLink="datepicker">DatePicker</a>
-      <a mat-list-item routerLink="snackbar">Snackbar</a>
-      <a mat-list-item routerLink="dialog">Dialog</a>
-      <a mat-list-item routerLink="datatable">DataTable</a>
-    </mat-nav-list>
+  >
+  <mat-toolbar color="primary">
+    Smart Examples
+  </mat-toolbar>
+  <mat-nav-list>
+    <a mat-list-item routerLink="/users">users</a>
+    <a mat-list-item routerLink="/formFieldInput">Form field input</a>
+    <a mat-list-item routerLink="/progBarSpinner">Progress bar and Spinner</a>
+    <a mat-list-item routerLink="/tabs">Tabs</a>
+    <a mat-list-item routerLink="/datepicker">Datepicker</a>
+    <a mat-list-item routerLink="/snackbar">Snackbar</a>
+    <a mat-list-item routerLink="/dialog">Dialog</a>
+    <a mat-list-item routerLink="/datatable">Datatable</a>
+  </mat-nav-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button mat-icon-button
-      class="example-icon"
-      (click)="sidenav.toggle()"
+    <mat-toolbar
+      class="toolbar-menu"
+      color="primary"
+      [class.mat-elevation-z4]="applyShadow"
+    >
+      <button
+        mat-icon-button
+        class="example-icon"
+        (click)="sidenav.toggle()"
       >
         <mat-icon>menu</mat-icon>
       </button>
-      <span>My App</span>
+      <span *ngIf="popText">My App</span>
       <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <button mat-icon-button class="example-icon favorite-icon">
         <mat-icon>favorite</mat-icon>
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <button mat-icon-button class="example-icon">
         <mat-icon>share</mat-icon>
       </button>
     </mat-toolbar>
-
+    <mat-toolbar class="toolbar-submenu" color="primary">
+      <span *ngIf="!popText">My App</span>
+    </mat-toolbar>
+    
     <router-outlet></router-outlet>
 
   </mat-sidenav-content>
