--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,5 +1,9 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Usuário" icon="list"></app-toolbar-title>
+  <app-toolbar-title title="Usuário" icon="list">
+    <button mat-icon-button>
+      <mat-icon>shared</mat-icon>
+    </button>
+  </app-toolbar-title>
   <nav mat-tab-nav-bar ngClass="tabs">
     <a mat-tab-link routerLink="/users/myProfile" routerLinkActive="active-link">
       <mat-icon>person</mat-icon>
