melhorias de layout visando UX Design

--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -6,6 +6,33 @@
   </app-toolbar-title>
 
   <div class="container">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet pariatur quod blanditiis, debitis aspernatur dolores libero harum quas at, ipsum ut enim, nostrum beatae officia esse odio ducimus cumque ipsa.
+    <br><br><br>
+
     <router-outlet></router-outlet>
   </div>
 </div>
