--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,57 @@
+<app-toolbar-menu
+  [menuTitle]="menuName"
+  [popText]="popText"
+  [shadow]="applyShadow"
+  [items_menu]="items_menu"
+  >
+
+</app-toolbar-menu>
+
 <mat-sidenav-container>
   <mat-sidenav
-    class="sidenav"
+    class="sidenav mat-elevation-z42"
     #sidenav
     [opened]="!isSmallScreen"
     [fixedInViewport]="true"
-    [mode]="sidenavMode"
-  >
-  <mat-toolbar color="primary">
-    Smart Examples
-  </mat-toolbar>
-  <mat-nav-list>
-    <a mat-list-item routerLink="/users">users</a>
-    <a *ngFor="let item of items_menu" mat-list-item [routerLink]="item.link" routerLinkActive="active">
-      <mat-icon fontSet="fa" [fontIcon]="item.icon"></mat-icon>
-      <span>{{ item.label }}</span>
-    </a>
+    [mode]="sidenavMode">
 
-  </mat-nav-list>
+    <mat-toolbar>
+      <img class="avatar mat-elevation-z4" src="https://avatars.githubusercontent.com/u/7767184?v=4" />
+      <a routerLink="/users" class="name">Rafael Batista</a>
+      <p class="designation">.NET Jr Developer</p>
+    </mat-toolbar>
+
+    <mat-divider></mat-divider>
+
+    <mat-nav-list>
+      <a *ngFor="let item of items_menu" mat-list-item [routerLink]="item.link" routerLinkActive="active">
+        <mat-icon fontSet="fa" [fontIcon]="item.icon"></mat-icon>
+        <span class="spanIcon">{{ item.label }}</span>
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar
-      class="toolbar-menu"
-      color="primary"
-      [class.mat-elevation-z4]="applyShadow"
-    >
-      <button
-        mat-icon-button
-        class="example-icon"
-        (click)="sidenav.toggle()"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span *ngIf="popText">My App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar>
     <mat-toolbar class="toolbar-submenu" color="primary">
-      <span *ngIf="!popText">My App</span>
+
+      <mat-toolbar-row class="toolbar-submenu-top">
+        <button
+          matTooltip="{{sidenav.opened ? 'Fechar menu' : 'Abrir menu'}}"
+          matTooltipPosition="right"
+          mat-icon-button
+          class="example-icon"
+          (click)="sidenav.toggle()">
+
+          <mat-icon>
+            {{sidenav.opened ? 'close' : 'menu'}}
+          </mat-icon>
+
+        </button>
+      </mat-toolbar-row>
+
+      <mat-toolbar-row class="toolbar-submenu-title">
+        <span *ngIf="!popText">{{ menuName }}</span>
+      </mat-toolbar-row>
     </mat-toolbar>
 
     <router-outlet></router-outlet>
