--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,3 @@
-
-
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-.sidenav {
-  width: 250px;
-}
-
 mat-sidenav-content {
   height: 100vh;
 }
@@ -16,20 +6,91 @@ mat-sidenav-container {
   height: 100vh;
 }
 
-.toolbar-menu {
-  position: fixed;
-  font-size: 1rem;
-  top: 0;
-  z-index: 1001;
+mat-toolbar-row{
+  padding: 0;
 }
 
 .toolbar-submenu {
-  height: 100px;
+  height: 205px;
   font-size: 2rem;
-  margin-top: 60px;
+  margin-top: 0px;
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: #575757;
+
+  &-top {
+    height: 40px;
+  }
+
+  &-title {
+    padding: 52px 30px;
+  }
 }
 
 
-.title {
-  margin-bottom: 500px;
+
+// ---- sidebar ----//
+.mat-drawer-content {
+  background-color: #efefef;
+}
+
+.sidenav{
+  width: 250px;
+  margin-top: 64px; //top Menu
+
+  .mat-icon{
+    margin: 10px, 20px 0 0;
+    font-size: 18px;
+    color: #636363;
+    height: 16px;
+    margin-right: 5px;
+  }
+
+  mat-toolbar{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: 200px;
+    background-color: white;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+
+  .avatar{
+    margin-top: 16px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+
+  .name{
+    margin-top: 8px;
+    font-weight: normal;
+  }
+
+  .designation{
+    margin-top: 2px;
+    font-size: 0.8rem;
+    color: gray;
+  }
+
+  mat-nav-list{
+    padding: 8px;
+
+    a{
+      border-radius: 10px;
+      margin-bottom: 4px;
+      padding-top: 1px;
+      font-size: 0.9rem;
+
+      a:hover{
+        background-color: #efefef;
+      }
+    }
+  }
 }
